src/test/ui/mismatched_types/issue-19109.stderr
error[E0308]: mismatched types
  --> $DIR/issue-19109.rs:4:5
   |
LL | fn function(t: &mut dyn Trait) {
   |                                - help: try adding a return type: `-> *mut dyn Trait`
LL |     t as *mut dyn Trait
   |     ^^^^^^^^^^^^^^^^^^^ expected `()`, found `*mut dyn Trait`
   |
   = note: expected unit type `()`
            found raw pointer `*mut dyn Trait`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
